Landing page is finish

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,7 +298,7 @@ section {
   background: #fff;
   box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.2);
   color: #000000;
-  background: linear-gradient(-45deg, #1391a5, #274685);
+  background: linear-gradient(-45deg, #94be8b, #198754);
   color: #fff;
   box-shadow: none;
 }
